demographic parity and equalized odds definition

--- a/loan_eligibility.ipynb
+++ b/loan_eligibility.ipynb
@@ -1246,6 +1246,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- the **Demographic Parity** metric requires that the proportion of each subgroup within a protected feature (such as gender) receiving the positive outcome should be equal across all subgroups.\n",
+    "\n",
+    "\n",
+    "- the **Equalized Odds** metric demands that the model correctly identifies positive outcomes at equal rates across groups. Additionally, it requires the model to misclassify positive outcomes at equal rates across groups, thus creating the same proportion of False Positives across all groups."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 195,
    "metadata": {},
