--- a/loan_eligibility.ipynb
+++ b/loan_eligibility.ipynb
@@ -4,11 +4,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bias Mitigation in Automated Loan Eligibility Process\n",
+    "# ***Bias Mitigation in Automated Loan Eligibility Process***\n",
     "**@authors: Chiara Angileri, Niccolò Marzi, Shola Oshodi** \n",
     "\n",
     "The dataset can be found in this link: https://www.kaggle.com/datasets/burak3ergun/loan-data-set/code?datasetId=74581"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Problem Statement"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## *Business Problem*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## *Translate Business Problem into Data Science / Machine Learning problem*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -39,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Dataset inspection and preparation"
+    "# 1. **Data collection**"
    ]
   },
   {
@@ -349,15 +390,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1 Inspection"
+    "## 1.1 **Exploratory Data Analysis (EDA)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'Number of rows: {df.shape[0]}')\n",
+    "print(f'Number of columns: {df.shape[1]}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Show the data types for each column of the dataset\n",
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Summary of the dataset, info about index dtype, column dtypes, non-null values and memory usage\n",
+    "df.info()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "We will now investigate the dataset data distribution"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -401,6 +484,29 @@
     "\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.1.1. **Univariate analysis**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Target Variable***: We will first look at the target variable, i.e., Loan_Status."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_variable = 'loan_status'\n"
    ]
   },
   {
@@ -590,7 +696,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.1.1. Bivariate Analysis"
+    "### 1.1.1. **Bivariate Analysis**"
    ]
   },
   {
