--- a/loan_eligibility.ipynb
+++ b/loan_eligibility.ipynb
@@ -313,7 +313,7 @@
    ],
    "source": [
     "# Import the dataset\n",
-    "df = pd.read_csv('loan_data_set2.csv')\n",
+    "df = pd.read_csv('loan_data_set.csv')\n",
     "df"
    ]
   },
